# aoc

2022/day1/: day1.py
2022/day10/: day10.py
2022/day11/: day11.py
2022/day12/: day12.py
2022/day13/: day13.py
2022/day14/src/: main.rs
2022/day15/: day15.py
2022/day2/src/: main.rs
2022/day3/src/: main.rs
2022/day4/src/: main.rs
2022/day5/src/: main.rs
2022/day6/src/: main.rs
2022/day7/src/: main.rs
2022/day8/src/: main.rs
2022/day9/: day9.py
2023/: Cargo.toml
2023/day1/: main.go  main.rs
2023/day10/: main.rs
2023/day11/: main.rs
2023/day12/: main.rs
2023/day13/: day13.py  main.rs
2023/day14/: main.rs
2023/day15/: main.rs
2023/day16/: main.rs
2023/day17/: main.rs
2023/day18/: main.rs
2023/day19/: main.rs
2023/day2/: main.go  main.rs
2023/day20/: main.rs
2023/day3/: main.rs
2023/day4/: main.rs
2023/day5/: main.rs
2023/day6/: main.rs
2023/day7/: hand.rs  main.rs
2023/day8/: main.rs
2023/day9/: main.rs
2023/inputs/: 5_test.txt
2024/lib/: utils.ml
2025/: flake.nix
